[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/shaders/main_ui.tres" type="Theme" id=1]
[ext_resource path="res://assets/textures/weapon_icons/laser_sword.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/weapon_icons/plasma_rifle.png" type="Texture" id=3]
[ext_resource path="res://assets/shaders/Audiowide-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/ui elements/UI.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.258824, 0.74902, 0.960784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 1, 0.0862745, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 4 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Main" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsCorner" type="VBoxContainer" parent="Main"]
margin_left = 10.0
margin_top = 5.0
margin_right = 344.0
margin_bottom = 75.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XP" type="HBoxContainer" parent="Main/StatsCorner"]
margin_right = 334.0
margin_bottom = 21.0

[node name="LevelLabel" type="Label" parent="Main/StatsCorner/XP"]
margin_right = 80.0
margin_bottom = 21.0
rect_min_size = Vector2( 80, 0 )
text = "Level: 1"

[node name="XPBar" type="ProgressBar" parent="Main/StatsCorner/XP"]
margin_left = 84.0
margin_right = 334.0
margin_bottom = 21.0
rect_min_size = Vector2( 250, 21 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="XPLabel" type="Label" parent="Main/StatsCorner/XP/XPBar"]
margin_left = 3.0
margin_right = 247.0
margin_bottom = 21.0
rect_min_size = Vector2( 100, 20 )
theme = ExtResource( 1 )
text = "0/100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="HBoxContainer" parent="Main/StatsCorner"]
margin_top = 25.0
margin_right = 334.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" type="ProgressBar" parent="Main/StatsCorner/Health"]
margin_right = 130.0
margin_bottom = 20.0
rect_min_size = Vector2( 130, 20 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HPLabel" type="Label" parent="Main/StatsCorner/Health/HPBar"]
margin_left = 3.0
margin_right = 127.0
margin_bottom = 21.0
rect_min_size = Vector2( 100, 20 )
theme = ExtResource( 1 )
text = "100/100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heal_indicator" type="ColorRect" parent="Main/StatsCorner/Health"]
margin_left = 134.0
margin_right = 137.0
margin_bottom = 20.0
rect_min_size = Vector2( 3, 0 )
color = Color( 0.996078, 0.00784314, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashLabel" type="Label" parent="Main/StatsCorner"]
margin_top = 49.0
margin_right = 334.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0.905882, 0.596078, 0.0941176, 1 )
text = "Cash: 10"

[node name="MidScreen" type="CenterContainer" parent="Main"]
margin_left = 10.0
margin_top = 5.0
margin_right = 1910.0
margin_bottom = 1075.0
mouse_filter = 1

[node name="crosshair" type="ColorRect" parent="Main/MidScreen"]
margin_left = 948.0
margin_top = 533.0
margin_right = 951.0
margin_bottom = 536.0
rect_min_size = Vector2( 3, 3 )
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry" type="ColorRect" parent="Main/MidScreen"]
visible = false
margin_left = 250.0
margin_top = 135.0
margin_right = 1650.0
margin_bottom = 935.0
rect_min_size = Vector2( 1400, 800 )
focus_neighbour_right = NodePath("Center/Menu/Buttons/OK")
focus_neighbour_bottom = NodePath("Center/Menu/Buttons/OK")
focus_mode = 2
mouse_filter = 1
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.509804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="Main/MidScreen/retry"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="Main/MidScreen/retry/Center"]
margin_left = 508.0
margin_top = 215.0
margin_right = 892.0
margin_bottom = 584.0
size_flags_horizontal = 3
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="you_died" type="Label" parent="Main/MidScreen/retry/Center/Menu"]
margin_right = 384.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "YOU DIED"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="try_again" type="Label" parent="Main/MidScreen/retry/Center/Menu"]
margin_top = 190.0
margin_right = 384.0
margin_bottom = 229.0
custom_fonts/font = SubResource( 6 )
text = "Try again?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Main/MidScreen/retry/Center/Menu"]
margin_top = 329.0
margin_right = 384.0
margin_bottom = 369.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="Main/MidScreen/retry/Center/Menu/Buttons"]
margin_right = 190.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
focus_neighbour_right = NodePath("../Quit")
size_flags_horizontal = 3
text = "OK"

[node name="Quit" type="Button" parent="Main/MidScreen/retry/Center/Menu/Buttons"]
margin_left = 194.0
margin_right = 384.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../OK")
focus_neighbour_right = NodePath("../OK")
size_flags_horizontal = 3
text = "Quit"

[node name="pause" type="ColorRect" parent="Main/MidScreen"]
visible = false
margin_left = 250.0
margin_top = 135.0
margin_right = 1650.0
margin_bottom = 935.0
rect_min_size = Vector2( 1400, 800 )
focus_neighbour_right = NodePath("Center/Menu/Buttons/Resume")
focus_neighbour_bottom = NodePath("Center/Menu/Buttons/Resume")
focus_mode = 2
mouse_filter = 1
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.509804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="Main/MidScreen/pause"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="Main/MidScreen/pause/Center"]
margin_left = 402.0
margin_top = 285.0
margin_right = 998.0
margin_bottom = 515.0
size_flags_horizontal = 3
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="Label" parent="Main/MidScreen/pause/Center/Menu"]
margin_right = 596.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "GAME PAUSED"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Main/MidScreen/pause/Center/Menu"]
margin_top = 190.0
margin_right = 596.0
margin_bottom = 230.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Main/MidScreen/pause/Center/Menu/Buttons"]
margin_right = 196.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
focus_neighbour_right = NodePath("../Restart")
size_flags_horizontal = 3
text = "Resume"

[node name="Restart" type="Button" parent="Main/MidScreen/pause/Center/Menu/Buttons"]
margin_left = 200.0
margin_right = 396.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
focus_neighbour_left = NodePath("../Resume")
focus_neighbour_right = NodePath("../Quit")
size_flags_horizontal = 3
text = "Restart"

[node name="Quit" type="Button" parent="Main/MidScreen/pause/Center/Menu/Buttons"]
margin_left = 400.0
margin_right = 596.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../Restart")
focus_neighbour_right = NodePath("../Resume")
size_flags_horizontal = 3
text = "Quit"

[node name="TopRight" type="Control" parent="Main"]
margin_left = 1910.0
margin_top = 5.0
margin_right = 1910.0
margin_bottom = 5.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="GameStats" type="VBoxContainer" parent="Main/TopRight"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -173.0
margin_right = -11.0
margin_bottom = 163.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSLabel" type="Label" parent="Main/TopRight/GameStats"]
margin_left = 89.0
margin_right = 162.0
margin_bottom = 21.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
theme = ExtResource( 1 )
text = "FPS: 60"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="Main/TopRight/GameStats"]
margin_left = 54.0
margin_top = 25.0
margin_right = 162.0
margin_bottom = 46.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
theme = ExtResource( 1 )
text = "Time: 0m 0s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Diff" type="Label" parent="Main/TopRight/GameStats"]
margin_left = 10.0
margin_top = 50.0
margin_right = 162.0
margin_bottom = 71.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
theme = ExtResource( 1 )
text = "Difficulty Scale: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemies" type="Label" parent="Main/TopRight/GameStats"]
margin_left = 67.0
margin_top = 75.0
margin_right = 162.0
margin_bottom = 96.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
theme = ExtResource( 1 )
text = "Enemies: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomPanel" type="CenterContainer" parent="Main"]
margin_left = 10.0
margin_top = 915.0
margin_right = 1910.0
margin_bottom = 1075.0
rect_min_size = Vector2( 0, 160 )
size_flags_vertical = 8

[node name="WeaponIcons" type="HBoxContainer" parent="Main/BottomPanel"]
margin_left = 548.0
margin_top = 17.0
margin_right = 1352.0
margin_bottom = 142.0
grow_horizontal = 2
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LeftWeaponPanel" type="VBoxContainer" parent="Main/BottomPanel/WeaponIcons"]
margin_right = 400.0
margin_bottom = 125.0

[node name="Icon" type="TextureRect" parent="Main/BottomPanel/WeaponIcons/LeftWeaponPanel"]
margin_left = 325.0
margin_right = 400.0
margin_bottom = 75.0
grow_horizontal = 0
size_flags_horizontal = 8
texture = ExtResource( 2 )
flip_h = true

[node name="Label" type="Label" parent="Main/BottomPanel/WeaponIcons/LeftWeaponPanel"]
margin_top = 79.0
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 0 )
text = "Laser Sword"
align = 2

[node name="DPS" type="Label" parent="Main/BottomPanel/WeaponIcons/LeftWeaponPanel"]
margin_top = 104.0
margin_right = 400.0
margin_bottom = 125.0
rect_min_size = Vector2( 400, 0 )
text = "DPS:"
align = 2

[node name="RightWeaponPanel" type="VBoxContainer" parent="Main/BottomPanel/WeaponIcons"]
margin_left = 404.0
margin_right = 804.0
margin_bottom = 125.0

[node name="Icon" type="TextureRect" parent="Main/BottomPanel/WeaponIcons/RightWeaponPanel"]
margin_right = 400.0
margin_bottom = 75.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Main/BottomPanel/WeaponIcons/RightWeaponPanel"]
margin_top = 79.0
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 0 )
text = "Plasma Rifle"

[node name="DPS" type="Label" parent="Main/BottomPanel/WeaponIcons/RightWeaponPanel"]
margin_top = 104.0
margin_right = 400.0
margin_bottom = 125.0
rect_min_size = Vector2( 400, 0 )
text = "DPS:"

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="pressed" from="Main/MidScreen/retry/Center/Menu/Buttons/OK" to="." method="restart"]
[connection signal="pressed" from="Main/MidScreen/retry/Center/Menu/Buttons/Quit" to="." method="quit"]
[connection signal="pressed" from="Main/MidScreen/pause/Center/Menu/Buttons/Resume" to="." method="resume"]
[connection signal="pressed" from="Main/MidScreen/pause/Center/Menu/Buttons/Restart" to="." method="restart"]
[connection signal="pressed" from="Main/MidScreen/pause/Center/Menu/Buttons/Quit" to="." method="quit"]
[connection signal="timeout" from="Timer" to="." method="add_second"]
